--- a/e-project/src/app/app.component.html
+++ b/e-project/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- app.component.html -->
+<!-- app.component.html
 <header>
   <h1>E-Learning Platform</h1>
 </header>
@@ -12,4 +12,6 @@
 
 <div class="router-container">
   <router-outlet></router-outlet>
-</div>
+</div> -->
+<!-- <app-admin></app-admin> -->
+<app-admin-add></app-admin-add>
