--- a/e-project/src/app/admin/admin.component.css
+++ b/e-project/src/app/admin/admin.component.css
@@ -114,6 +114,8 @@ align-items: center;
   background-color: #b49966;
   color: aliceblue;
   text-decoration: none;
+  text-align: center;
+  
 }
 
 
