--- a/e-project/src/app/admin/admin.component.html
+++ b/e-project/src/app/admin/admin.component.html
@@ -104,13 +104,11 @@
     </div>
   </aside>
 </div>
-<footer class="footer">
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-
+<footer class="footer" >
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);  margin-left: 0px;
+  margin-right: 90px;">
     <h6 class="text-light" >E-Learning Platform </h6>
   </div>
-  <!-- Copyright -->
 </footer>
 
 
