--- a/e-project/src/app/admin-add/admin-add.component.css
+++ b/e-project/src/app/admin-add/admin-add.component.css
@@ -1,85 +1,40 @@
-/* .admin-dashboard {
-    background-color: #f5f5f5;
-    padding: 20px;
+   nav{
+    background-color:#b49966;
   }
   
-  h1 {
-    color: #ff0066;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  form {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-  }
-  
-  label {
-    color: #333;
-    font-weight: bold;
-  }
-  
-  input[type="text"] {
-    width: 100%;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-  }
-  
-  .topics-container {
-    margin-bottom: 20px;
-  }
-  
-  .topic-row {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .delete-topic-btn,
-  .attach-file-btn {
-    background-color: #007bff;
+  .home-button {
+    background-color:#856b24;
     color: #fff;
-    border: none;
-    padding: 8px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-left: 10px;
-  }
-  
-  .attach-file-btn {
-    background-color: #28a745;
-  }
-  
-  button[type="button"],
-  button[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
     padding: 10px 20px;
-    border-radius: 5px;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    margin-right: 10px;
+    transition: background-color 0.3s ease-in-out;
+    margin-left:60px;
   }
   
-  button[type="button"]:hover,
-  button[type="submit"]:hover,
-  .delete-topic-btn:hover,
-  .attach-file-btn:hover {
-    opacity: 0.8;
+  .home-button:hover {
+    background-color: #007700;
   }
-   */
-
    .admin-dashboard {
-    background-color: #f5f5f5;
-    padding: 10px;
+    max-width: 600px;
+    margin-top: 5%;
+    margin-left: 26%;
+    background-color: #856b24;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+
   }
   
   form {
-    background-color: #fff;
-    padding: 10px;
+    background-color: #b49966;
+    padding: 6px;
     border-radius: 5px;
   }
   
@@ -108,7 +63,7 @@
   
   .delete-topic-btn,
   .attach-file-btn {
-    background-color: #007bff;
+    background-color: #f14009;
     color: #fff;
     border: none;
     padding: 6px 10px;
@@ -138,4 +93,22 @@
   .attach-file-btn:hover {
     opacity: 0.8;
   }
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #b49966;
+    color: aliceblue;
+    text-decoration: none;
+    padding-top: 20px;
+    text-align: center;
+    
+  }
+  .footer-text{
+    font-size: large;
+  }
+
+
+
   
