--- a/e-project/src/app/admin-add/admin-add.component.css
+++ b/e-project/src/app/admin-add/admin-add.component.css
@@ -2,6 +2,9 @@
     background-color:#b49966;
   }
   
+  .admin-page{
+    
+  }
   .home-button {
     background-color:#856b24;
     color: #fff;
