--- a/e-project/src/app/admin/admin.component.html
+++ b/e-project/src/app/admin/admin.component.html
@@ -1,54 +1,12 @@
-<!-- <div class="admin-dashboard">
-  <h1>Admin Dashboard</h1>
-
-  
-  <form>
-    <label for="courseId">Course ID:</label>
-    <input type="text" id="courseId" name="courseId" required>
-
-    <label for="courseName">Course Name:</label>
-    <input type="text" id="courseName" name="courseName" required>
-
-    <label for="topic">Topics</label>
-    <div class="topics-container">
-      <div *ngFor="let topic of topics; let i = index" class="topic-row">
-        <input type="text" name="topic" required [(ngModel)]="topics[i]">
-        <button class="delete-topic-btn" (click)="deleteTopic(i)">delete<i class="fas fa-trash"></i></button>
-      </div>
-    </div>
-    <br>
-    <br>
-
-    <button type="button" (click)="addTopic()"><i class="fas fa-plus"></i> Add Topic</button>
-    <button type="submit">Add Course</button>
-  </form>
-</div> -->
-
-<!-- <div class="admin-page">
-  <header class="header">
-    <button style="margin-left: 93%;" class="home-button">Home</button>
-  </header>
-</div>
-<div>
-  <aside class="left-aside">
-    
-    <button class="add-button"><i class="bi bi-file-earmark-plus"></i><br>Add</button>
-  </aside>
-</div> -->
-
 <div class="background">
 
   <nav class="navbar navbar-expand-sm navbar-light bg">
-    <div class="container align-items-start">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item title">
+      
           <h2><strong>logo</strong></h2>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto ">
-        <li class="nav-item">
-          <button class="home-button"><strong>Home</strong> <span class="sr-only"></span></button>
-        </ul> </div>
+      
+      
+          <button class="home-button "><strong>Home</strong></button>
+      
         </nav>
   <div class="admin-page">
 <div class="container">
@@ -104,11 +62,9 @@
     </div>
   </aside>
 </div>
+</div>
 <footer class="footer" >
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);  margin-left: 0px;
-  margin-right: 90px;">
-    <h6 class="text-light" >E-Learning Platform </h6>
-  </div>
+    <h6 style="align-content: center;" >E-Learning Platform </h6>
 </footer>
 
 
@@ -116,4 +72,3 @@
 
 
 
-</div>
