--- a/e-project/src/app/admin-add/admin-add.component.html
+++ b/e-project/src/app/admin-add/admin-add.component.html
@@ -1,40 +1,3 @@
-<!-- <div class="container">
-  <h1>Add Course</h1>
-  <form (ngSubmit)="addCourse()" #courseForm="ngForm">
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input type="text" class="form-control" id="title" name="title" [(ngModel)]="title" required>
-    </div>
-    <div class="form-group">
-      <label for="description">Description</label>
-      <textarea class="form-control" id="description" name="description" [(ngModel)]="description" required></textarea>
-    </div>
-    <div class="form-group">
-      <label for="topics">Topics</label>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Topic Title</th>
-            <th>Topic Description</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let topic of topics; let i = index">
-            <td>
-              <input type="text" class="form-control" name="topicTitle{{i}}" [(ngModel)]="topics[i].name" required>
-            </td>
-            <td>
-              <input type="text" class="form-control" name="topiccontent{{i}}" [(ngModel)]="topics[i].content" required>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <button (click)="addTopic()" type="button" class="btn btn-primary">Add Topic</button>
-    <button type="submit" class="btn btn-primary" [disabled]="!courseForm.form.valid">Add Course</button>
-  </form>
-</div> -->
-
 <div class="container">
   <h1>Add Course</h1>
   <form (ngSubmit)="addCourse()" #courseForm="ngForm">
@@ -67,6 +30,9 @@
             <td>
               <input type="text" class="form-control" name="topiccontent{{i}}" [(ngModel)]="topics[i].content" required>
             </td>
+            <td>
+              <button type="button" class="btn btn-danger" (click)="deleteTopic(i)">Delete</button>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -75,3 +41,5 @@
     <button type="submit" class="btn btn-primary" [disabled]="!courseForm.form.valid">Add Course</button>
   </form>
 </div>
+
+
