--- a/e-project/src/app/app.component.html
+++ b/e-project/src/app/app.component.html
@@ -11,8 +11,9 @@
 </nav>
 
 <div class="router-container">
-  <router-outlet></router-outlet>
-</div> -->
-<!-- <app-admin></app-admin> -->
+<router-outlet></router-outlet> 
+
+<app-admin></app-admin> -->
 <app-admin-add></app-admin-add>
+<!-- <router-outlet></router-outlet> -->
 
