--- a/e-project/src/app/admin-add/admin-add.component.css
+++ b/e-project/src/app/admin-add/admin-add.component.css
@@ -160,8 +160,8 @@ td {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #979695;
-  color: aliceblue;
+  background-color: #d6d4d3;
+  color: rgb(43, 44, 44);
   text-decoration: none;
   text-align: center;
   height: 30px;
