--- a/e-project/src/app/admin-add/admin-add.component.html
+++ b/e-project/src/app/admin-add/admin-add.component.html
@@ -60,7 +60,7 @@
   </form>
 </div>
 <footer class="footer" >
-  <h6 style="align-content: center;" >E-Learning Platform </h6>
+  <h6 style="align-content: center;" >CodeCraft </h6>
 </footer>
 
 
