--- a/e-project/src/app/app.component.html
+++ b/e-project/src/app/app.component.html
@@ -13,7 +13,8 @@
 <div class="router-container">
 <router-outlet></router-outlet> 
 
-<app-admin></app-admin> -->
+ 
 <app-admin-add></app-admin-add>
 <!-- <router-outlet></router-outlet> -->
-
+<!-- <app-admin></app-admin> -->
+<app-admin-add></app-admin-add>
