--- a/e-project/src/app/admin/admin.component.css
+++ b/e-project/src/app/admin/admin.component.css
@@ -1,28 +1,64 @@
-nav{
-  background-color:#b49966;
-  align-items: center;
-  height: fit-content;
-}
-/* .nav-item{
-  margin-left: 200px;
-}
-.navbar-nav {
-  margin-right: 520px;
-} */
-.home-button {
-  background-color:#856b24;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-  margin-left: 1100px;
-  
+
+.header .logo {
+  font-size: 25px;
+  font-family: 'Sriracha', cursive;
+  color: #000;
+  text-decoration: none;
+  margin-left: 30px;
 }
 
-.home-button:hover {
-  background-color: #007700;
+.nav-items {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color:#f5f5f5;
+  margin-right: 5px;
+  margin-left: 15px;
+  height: 60px;
+}
+
+.nav-items a {
+  text-decoration: none;
+  color: #000;
+  padding: 35px 20px;
+}
+
+.login-icon {
+  width: 24px; /* Adjust the width as per your requirements */
+  height: 24px; /* Adjust the height as per your requirements */
+  border: none; /* Remove the border */
+  outline: none;
+
+}
+
+.logo-icon{
+  width: 150px; /* Adjust the width as per your requirements */
+  height: 60px;
+}
+
+.login-container {
+ margin-left:1000px;
+
+}
+
+.logo-container{
+  margin-left: -70px;
+}
+.login-button {
+  margin-left: 10px; 
+}
+
+.support-container{
+  margin-left: 1000px;
+}
+
+.login-button:hover {
+  background-color: #0056b3;
+}
+.whole
+{
+  margin-top: 50px;
+ height: 200px;
 }
 .admin-page{
   height: 540px;
@@ -42,15 +78,13 @@ nav{
 
 .container {
   display: flex;
-  background-size: cover;
-  align-items: center;
-  
+  flex-wrap: wrap;
 }
-.background
+/* .background
 {
    background-color: antiquewhite; 
   background-size: cover;
-}
+} */
 .course{
 align-items: center;
 }
@@ -81,33 +115,34 @@ align-items: center;
 }
 
 .column {
-  flex: 1;
-  margin-right: 20px;
+  flex-basis: 25%;
+  padding: 0 15px;
 }
 
 
 
 .course-card {
-  border: 1px solid #ccc;
-  padding: 5px;
-  text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  height: 200px; /* Set a fixed height for the course card */
+  text-align: center;
 }
 
 .course-card img {
   width: 100%;
-  max-height: 200px;
+  height: 150px; /* Set a fixed height for the course card image */
   object-fit: cover;
   margin-bottom: 10px;
 }
 
-
 .edit-button {
-  background-color: #856b24;
-  color: #fff;
+  background-color: #c0bfbd;
+  color: #000000;
   padding: 5px 10px;
   border: none;
   border-radius: 4px;
@@ -117,18 +152,31 @@ align-items: center;
 }
 
 .edit-button:hover {
-  background-color: #007700;
+  background-color: #9a9997; /* Change the background color on hover */
 }
+
 .footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #b49966;
-  color: aliceblue;
+  background-color: #d6d4d3;
+  color: rgb(43, 44, 44);
   text-decoration: none;
   text-align: center;
-  height: 30px; /* Adjust the height according to your needs */
+  height: 30px;
+  
+}
+@media screen and (max-width: 768px) {
+  .column {
+    flex-basis: 50%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .column {
+    flex-basis: 100%;
+  }
 }
 
   
