--- a/e-project/src/app/app.component.html
+++ b/e-project/src/app/app.component.html
@@ -16,5 +16,5 @@
  
 <app-admin-add></app-admin-add>
 <!-- <router-outlet></router-outlet> -->
-<!-- <app-admin></app-admin> -->
-<app-admin-add></app-admin-add>
+<app-admin></app-admin>
+<!-- <app-admin-add></app-admin-add> -->
