--- a/e-project/src/app/admin/admin.component.css
+++ b/e-project/src/app/admin/admin.component.css
@@ -9,7 +9,7 @@
 
 .nav-items {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color:#f5f5f5;
   margin-right: 5px;
@@ -37,15 +37,18 @@
 }
 
 .login-container {
- margin-left:1000px;
+ margin-left:-100px;
 
 }
 
 .logo-container{
-  margin-left: -70px;
+  margin-left: -50px;
 }
 .login-button {
   margin-left: 10px; 
+  height: 60px;
+  width: 50px;
+  border: none;
 }
 
 .support-container{
@@ -64,16 +67,23 @@
   height: 540px;
 }
 .add-button {
-  background-color: #64511e;
-  color: #fff;
+  background-color: #ebe9e5;
+  color: #0e0d0d;
   padding: 20px 20px;
   border: none;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   cursor: pointer;
+  margin-left: 70px;
   transition: background-color 0.3s ease-in-out;
+  /* height: 60px; */
+ 
 } 
 .add-button:hover {
-  background-color: #007700;
+  background-color: #aac2aa;
+}
+.add-nav{
+  margin-left: 700px;
+  
 }
 
 .container {
@@ -89,7 +99,7 @@
 align-items: center;
 }
 
-.left-aside {
+/* .left-aside {
   background-color: rgb(240, 205, 160);
   width: 15%;
   min-height: 60vh;
@@ -101,13 +111,13 @@ align-items: center;
   margin-top: 20px;
   margin-bottom: 20px;
  
-}
+} */
 
-.right-aside {
+/* .right-aside {
   width: 70%;
   padding: 20px;
   
-}
+} */
 
 .row {
   display: flex;
@@ -129,8 +139,9 @@ align-items: center;
   margin-bottom: 20px;
   border: 1px solid #ccc;
   padding: 10px;
-  height: 200px; /* Set a fixed height for the course card */
+  height: 300px; /* Set a fixed height for the course card */
   text-align: center;
+  width: 200px;
 }
 
 .course-card img {
