--- a/e-project/src/app/app.component.html
+++ b/e-project/src/app/app.component.html
@@ -15,6 +15,6 @@
 
  
 <app-admin-add></app-admin-add>
-<!-- <router-outlet></router-outlet> -->
-<app-admin></app-admin>
-<!-- <app-admin-add></app-admin-add> -->
+<router-outlet></router-outlet> -->
+<!-- <app-admin></app-admin> -->
+<app-admin-add></app-admin-add>
