--- a/e-project/src/app/admin/admin.component.css
+++ b/e-project/src/app/admin/admin.component.css
@@ -38,6 +38,7 @@
 
 .login-container {
  margin-left:-100px;
+ background-color: #ebe9e5;
 
 }
 
@@ -56,7 +57,7 @@
 }
 
 .login-button:hover {
-  background-color: #0056b3;
+  background-color:  #aac2aa;
 }
 .whole
 {
@@ -75,7 +76,7 @@
   cursor: pointer;
   margin-left: 70px;
   transition: background-color 0.3s ease-in-out;
-  /* height: 60px; */
+   height: 60px; 
  
 } 
 .add-button:hover {
@@ -134,14 +135,20 @@ align-items: center;
 .course-card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #fffcfce6;
   padding: 10px;
-  height: 300px; /* Set a fixed height for the course card */
+  height: 200px; /* Set a fixed height for the course card */
   text-align: center;
   width: 200px;
+  /* position: relative; */
+  /* display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1cm;
+   */
+  
 }
 
 .course-card img {
@@ -150,17 +157,28 @@ align-items: center;
   object-fit: cover;
   margin-bottom: 10px;
 }
-
-.edit-button {
-  background-color: #c0bfbd;
+.edit{
+  position: relative;
+}
+.edit-button { 
+   /* 
   color: #000000;
   padding: 5px 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   margin-top: 10px;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out; */
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: #f8f7f5;
 }
+
 
 .edit-button:hover {
   background-color: #9a9997; /* Change the background color on hover */
